minikube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: td-slack-bot-service
  namespace: td-slack-bot
  labels:
    app: td-slack-bot-service
spec:
  type: ClusterIP
  selector:
    app: td-slack-bot
  ports:
    - protocol: TCP
      name: http-port-3000
      port: 3000
      targetPort: 3000
